Fix board overflow.

--- a/style.css
+++ b/style.css
@@ -12,5 +12,5 @@ canvas {
     height: auto;
     transform: rotateX(9deg) translateY(-10px);
     width: 75%;
-    /* width: 60%; */
+    width: 60%;
 }
